# duck

./: .ccls  .gitignore  LICENSE  Makefile.am  autogen.sh  clean.sh  compile_flags.txt  configure.ac
docs/: basics.org
src/: Makefile.am
src/duck-base/: Makefile.am  base.c  base.h  builtin_func_kinds.c  builtin_func_kinds.h  builtin_guids.h  builtin_kinds.c  builtin_kinds.h  cstr.h  data.h  defs.h  func.h  func_kind.h  guid.c  guid.h  kind.c  kind.h  object.h  type.h
src/duck-cli/: Makefile.am  main.c
src/duck-guid-gen/: Makefile.am  main.c
src/duck-lib-example/: Makefile.am  example.c
src/duck-server/: Makefile.am  main.c  main.cpp
src/libduck/: Makefile.am  base.c  base.h
src/quack/: Makefile.am  main.c  main.cpp  sys.c  sys.h
